commit modifiche Nicolò al 30/05/2012 ore 16.57 (per Pull)